syntax = "proto3";
package pb;
// protoc --go_out=./ --go-grpc_out=./ order.proto
option go_package = "./pb";

import "google/protobuf/empty.proto";
message OrderProduct{
  string id = 1;
  string name = 2;
  double price = 4;
  uint32 quantity = 5;
}

message Address {
  string AddressId = 1;
  string userId = 2;
  bool isDefault = 3;
  string Street = 4;
  string ApartmentUnit = 5;
  string City = 6;
  string State = 7;
  string Country = 8;
  string ZipCode = 9;
  string CreatedAt = 10;
  string Name = 11;
  string Phone = 12;
}


message Order{
  message OrderProduct{
    string productId = 1;
    string name = 2;
    double price = 3;
    uint32 quantity = 4;
    string imageURL = 5;
  }

  string orderId = 1;
  string createdAt = 2;
  string accountId = 3;
  double totalPrice = 4;
  string ETA = 5;
  string MethodOfPayment = 6;
  string TransactionId = 7;
  repeated OrderProduct products = 8;
  string PaymentStatus = 9;
  string OrderStatus = 10;
  Address address = 11;
}

message PostOrderRequest {
  message OrderProduct{
    string productId = 2;
    uint32 quantity = 3;
  }
  string accountId = 2;
  string MethodOfPayment = 3;
  string TransactionId = 4;
  string PaymentStatus = 5;
  repeated OrderProduct products = 6;
  string addressId = 7;
}

message PostOrderResponse{
  Order order = 1;
  string message = 3;
}

message GetOrderRequest{
  string orderId = 1;
}

message GetOrderResponse{
  Order order = 1;
}

message GetOrdersForAccountRequest {
  string accountId = 1;
}

message GetOrdersForAccountResponse {
  message Order {
    string OrderId = 1;
    string createdAt = 2;
    string TotalPrice = 3;
    string ETA = 4;
    string OrderStatus = 5;
  }
  repeated Order orders = 1;
}

service OrderService{
  rpc PostOrder(PostOrderRequest) returns (PostOrderResponse) {}
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse) {}
  rpc GetOrdersForAccount(GetOrdersForAccountRequest) returns (GetOrdersForAccountResponse) {}
}


// proto structure of account service

message GetAddressRequest {
  string AddressId = 1;
}

message Account {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string userType = 5;
}

message AccountResponse {
  Account account = 1;
}

service AccountService {
  rpc GetAccount(google.protobuf.Empty) returns (AccountResponse) {}
  rpc GetAddress(GetAddressRequest) returns (Address) {}
}


// proto structure of cart service